fix component spacing

--- a/main/assets/css/custom-style/_spacing.scss
+++ b/main/assets/css/custom-style/_spacing.scss
@@ -14,7 +14,7 @@
   --space-xxl: calc(3.375 * var(--space-unit));
   --space-xxxl: calc(5.063 * var(--space-unit));
   --space-xxxxl: calc(7.59 * var(--space-unit));
-  --component-padding: var(--space-md);
+  --component-padding: calc(10px + var(--space-md));
 }
 
 @include breakpoint(sm) {
@@ -35,7 +35,7 @@
     --space-xxl: calc(4.236 * var(--space-unit));
     --space-xxxl: calc(6.854 * var(--space-unit));
     --space-xxxxl: calc(11.08 * var(--space-unit));
-    --component-padding: var(--space-xl);
+    --component-padding: var(--space-lg);
   }
 }
 
@@ -48,6 +48,7 @@
 @include breakpoint(lg) {
   :root, * {
     --component-padding: var(--space-xxxl);
+
   }
 }
 
